Use URL instead of URI to handle encoding/decoding issue